--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -24,7 +24,7 @@
   "openrouter_api_key_placeholder": { "message": "Enter your OpenRouter API key (optional)" },
   "about_section_title": { "message": "About" },
   "version_label": { "message": "Version:" },
-  "created_by_label": { "message": "Created by Dimitry Polivaev" },
+  "created_by_label": { "message": "Created by Dimitry Polivaev with AI assistance" },
   "build_time_label": { "message": "Build time:" },
   "results_page_title": { "message": "Chapters" },
   "back_to_video_button": { "message": "Back to Video" },
@@ -85,5 +85,8 @@
   "model_temporarily_unavailable": { "message": "Model temporarily unavailable." },
   "content_too_long": { "message": "The video content is too long. Try with a shorter video or split the content." },
   "content_filtered": { "message": "Content was filtered by safety systems. Try with different content." },
-  "general_error": { "message": "Please try again or switch to a different model." }
+  "general_error": { "message": "Please try again or switch to a different model." },
+  "about_github_link_text": { "message": "Project on GitHub" },
+  "about_license_text": { "message": "Licensed under GPL3 or later" },
+  "about_license_link_text": { "message": "View License" }
 } 
