--- a/src/_locales/he/messages.json
+++ b/src/_locales/he/messages.json
@@ -24,7 +24,7 @@
   "openrouter_api_key_placeholder": { "message": "הזן את מפתח OpenRouter API שלך (אופציונלי)" },
   "about_section_title": { "message": "אודות" },
   "version_label": { "message": "גרסה:" },
-  "created_by_label": { "message": "נוצר על ידי דימיטרי פוליבייב" },
+  "created_by_label": { "message": "נוצר על ידי Dimitry Polivaev בסיוע בינה מלאכותית" },
   "build_time_label": { "message": "זמן בנייה:" },
   "results_page_title": { "message": "פרקים" },
   "back_to_video_button": { "message": "חזרה לוידאו" },
@@ -85,5 +85,8 @@
   "model_temporarily_unavailable": { "message": "הדגם אינו זמין זמנית." },
   "content_too_long": { "message": "תוכן הוידאו ארוך מדי. נסה עם וידאו קצר יותר או חלק את התוכן." },
   "content_filtered": { "message": "התוכן סונן על ידי מערכות אבטחה. נסה תוכן אחר." },
-  "general_error": { "message": "אנא נסה שוב או עבור לדגם אחר." }
+  "general_error": { "message": "אנא נסה שוב או עבור לדגם אחר." },
+  "about_github_link_text": { "message": "הפרויקט ב-GitHub" },
+  "about_license_text": { "message": "ברישיון GPL3 או מאוחר יותר" },
+  "about_license_link_text": { "message": "הצג רישיון" }
 } 
