--- a/src/_locales/he/messages.json
+++ b/src/_locales/he/messages.json
@@ -102,5 +102,6 @@
   "language_settings_title": { "message": "הגדרות שפה" },
   "language_selector_label": { "message": "שפת ממשק:" },
   "language_browser_ui": { "message": "שפת ממשק הדפדפן" },
-  "free": { "message": "חינם" }
+  "free": { "message": "חינם" },
+  "pricing_tooltip": { "message": "טוקנים לכל ‎$0.01‎ (קלט/פלט)" }
 } 
