--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -102,5 +102,6 @@
   "language_settings_title": { "message": "Настройки языка" },
   "language_selector_label": { "message": "Язык интерфейса:" },
   "language_browser_ui": { "message": "Язык интерфейса браузера" },
-  "free": { "message": "Бесплатно" }
+  "free": { "message": "Бесплатно" },
+  "pricing_tooltip": { "message": "Токены за 0,01 $ (ввод/вывод)" }
 } 
