--- a/src/_locales/uk/messages.json
+++ b/src/_locales/uk/messages.json
@@ -102,5 +102,6 @@
   "language_settings_title": { "message": "Налаштування мови" },
   "language_selector_label": { "message": "Мова інтерфейсу:" },
   "language_browser_ui": { "message": "Мова інтерфейсу браузера" },
-  "free": { "message": "Безкоштовно" }
+  "free": { "message": "Безкоштовно" },
+  "pricing_tooltip": { "message": "Токени за 0,01 $ (ввід/вивід)" }
 } 
