fix: eliminate chat 'Session not found' after worker restart; dead-state for history tabs
- Background returns no_session instead of throwing when session is absent
- Results page shows neutral no-session state; chat/copy disabled until session exists
- Background pings open results tabs on start to re-register lightweight mappings
- Add no_session_available + no_session_description in all locales
- Add tests: ResultsDeadState and ResultsRehydrateAndChat
- Remove transient comments; satisfy ESLint; minor brace/spacing cleanup
- Bump version to 1.4.5 and update CHANGELOG

--- a/src/_locales/ar/messages.json
+++ b/src/_locales/ar/messages.json
@@ -64,6 +64,8 @@
   "please_try_again": { "message": "يرجى المحاولة مرة أخرى." },
   "generation_failed": { "message": "فشل في الإنشاء" },
   "error_loading_results": { "message": "خطأ في تحميل النتائج" },
+  "no_session_available": { "message": "لا توجد بيانات جلسة متاحة لهذه الصفحة." },
+  "no_session_description": { "message": "لا تحتوي علامة تبويب النتائج هذه على جلسة نشطة. لا يمكن استعادة المحتوى القديم." },
   "no_results_found": { "message": "لم يتم العثور على نتائج في هذه الجلسة. يرجى إنشاء الفصول أولاً." },
   "unknown_title": { "message": "عنوان غير معروف" },
   "unknown_author": { "message": "مؤلف غير معروف" },
