--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -73,6 +73,8 @@
   "please_try_again": { "message": "Please try again." },
   "generation_failed": { "message": "Generation failed" },
   "error_loading_results": { "message": "Error loading results" },
+  "no_session_available": { "message": "No session data available for this page." },
+  "no_session_description": { "message": "This results tab does not have an active session. Old content cannot be restored." },
   "no_results_found": { "message": "No results found in this session. Please generate chapters first." },
   "unknown_title": { "message": "Unknown Title" },
   "unknown_author": { "message": "Unknown Author" },
