--- a/src/_locales/ko/messages.json
+++ b/src/_locales/ko/messages.json
@@ -64,6 +64,8 @@
   "please_try_again": { "message": "다시 시도하세요." },
   "generation_failed": { "message": "생성 실패" },
   "error_loading_results": { "message": "결과 로드 오류" },
+  "no_session_available": { "message": "이 페이지에 사용할 수 있는 세션 데이터가 없습니다." },
+  "no_session_description": { "message": "이 결과 탭에는 활성 세션이 없습니다. 이전 콘텐츠는 복원할 수 없습니다." },
   "no_results_found": { "message": "이 세션에서 결과를 찾을 수 없습니다. 먼저 챕터를 생성하세요." },
   "unknown_title": { "message": "알 수 없는 제목" },
   "unknown_author": { "message": "알 수 없는 작성자" },
